# JanusQ

./: .gitignore  README.md  main.py  requirements.txt  setup.py  test.py
Choco-Q/: .gitignore  (+2 more)
janusq/application/chocoq/: LICENSE  README.md  environment_cpu.yml  environment_linux_cpu.yml  environment_linux_gpu.yml  environment_macos.yml  environment_osx.yml  pyproject.toml  setup.py  test.ipynb  testbed_cpu.py
janusq/application/chocoq/chocoq/decomposition/: abstract_decomposer.py  decompsition_1.py
janusq/application/chocoq/chocoq/model/: lin_constr_bin_opt.py  model.py
janusq/application/chocoq/chocoq/problems/: capital_budgeting_problem.py  cnst_demo.py  facility_location_problem.py  graph_coloring_problem.py  job_scheduling_problem.py  k_partition_problem.py  set_cover_problem.py  traveling_salesman_problem.py
janusq/application/chocoq/chocoq/solvers/: abstract_solver.py
janusq/application/chocoq/chocoq/solvers/data_analyzer/: data_analyzer.py
janusq/application/chocoq/chocoq/solvers/optimizers/: abstract_optimizer.py  gradient.py  non_gradient.py
janusq/application/chocoq/chocoq/solvers/options/: optimizer_option.py
janusq/application/chocoq/chocoq/solvers/pennylane/: chococlever.py
janusq/application/chocoq/chocoq/solvers/qiskit/: __init__.py  choco.py  choco_inter_meas.py  cyclic.py  hea.py  penalty.py  qto.py  qto_simplify.py  qto_simplify_discard.py  qto_simplify_discard_segmented.py  (+1 more)
janusq/application/chocoq/chocoq/utils/: counter.py  gadget.py  kill.py
janusq/application/chocoq/implementations/: 2_table_evaluate_all_scale.csv
(+421 files in other folders)
